Skip to content

GitLab

  • Menu
Projects Groups Snippets
  • Help
    • Help
    • Support
    • Community forum
    • Submit feedback
  • Sign in / Register
  • VLC VLC
  • Project information
    • Project information
    • Activity
    • Labels
    • Members
  • Repository
    • Repository
    • Files
    • Commits
    • Branches
    • Tags
    • Contributors
    • Graph
    • Compare
  • Issues 3,401
    • Issues 3,401
    • List
    • Boards
    • Service Desk
    • Milestones
  • Merge requests 170
    • Merge requests 170
  • CI/CD
    • CI/CD
    • Pipelines
    • Jobs
    • Schedules
  • Deployments
    • Deployments
    • Releases
  • Activity
  • Graph
  • Create a new issue
  • Jobs
  • Commits
  • Issue Boards
Collapse sidebar
  • VideoLAN
  • VLCVLC
  • Issues
  • #18150

Closed
Open
Created Mar 22, 2017 by Filip Roséen@FilipRoseen-refp

playlist/preparser: cancellation leads to partial art download

If the thread responsible for fetching art is cancelled while art is still being downloaded, the cache will be populated with an entry containing partial content.

An easy way to reproduce the issue is by doing something as the below:

 % cat /tmp/foo.m3u
 #EXTM3U
 #EXTALBUMARTURL:http://localhost:1337/korv.png
 file:///tmp/sample_1.mp3

 % echo -e \
 > "HTTP/1.0 200 OK\r\n"\
 > "Content-Type: image/png\r\n"\
 > "Content-Length: 1337\r\n"\
 > "\r\n"\
 > "this is spaa-" | nc -l -p 1337

Then:

  1. Play /tmp/foo.m3u
  2. Notice that VLC tries to download the art from our fake httpd
  3. Close VLC
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Assignee
Assign to
Time tracking

VideoLAN code repository instance